--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -190,7 +190,7 @@
 .index-search-upload {
     height: 30px;
     padding: 9px 25px;
-    background-color: rgba(255, 75, 0);
+    background-color: rgb(255, 75, 0);
     border-radius: 5px;
     color: white;
     letter-spacing: 1px;
@@ -252,7 +252,7 @@ h4 {
 .index-trending-signup {
     height: 30px;
     padding: 8px 25px;
-    background-color: rgba(255, 75, 0);
+    background-color: rgb(255, 75, 0);
     border-radius: 5px;
     color: white;
     letter-spacing: 1px;
@@ -341,7 +341,7 @@ h4 {
 .index-singer-signup {
     height: 30px;
     padding: 8px 35px;
-    background-color: rgba(255, 75, 0);
+    background-color: rgb(255, 75, 0);
     border-radius: 5px;
     color: white;
     letter-spacing: 1px;
