--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,14 @@
     <title>Wavesky</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    
+    <!-- font awesome !-->
+    <script src = "https://kit.fontawesome.com/c212c7eb6d.js"
+    crossorigin = "anonymous" > </script>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
     
     <% if current_user %>
       <script>
