--- a/app/assets/stylesheets/song_form.scss
+++ b/app/assets/stylesheets/song_form.scss
@@ -16,8 +16,28 @@
     margin: auto;
 
 }
-
-.song-form-upload{
+.image-preview img{
+    height: inherit;
+    background-color: white;
+    
+}
+.first-song-form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    width: 800px;
+    height: 600px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 100px;
+    
+}
+.second-song-form{
     position: absolute;
     z-index: 1;
     background-color: white;
@@ -30,135 +50,127 @@
     
 }
 
-.upload-button{
-    background-color: rgb(255, 75, 0);
-}
+// .upload-button{
+//     background-color: rgb(255, 75, 0);
+// }
 
 
-.upload-btn-wrapper {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-}
 
-.upload-button {
-    color: white;
-    background-color: rgb(255, 75, 0);
-    padding: 8px 40px;
-    border-radius: 3px;
-    font-size: 20px;
-}
+// .music-upload-button {
+//     color: white;
+//     background-color: rgb(255, 75, 0);
+//     padding: 8px 40px;
+//     border-radius: 3px;
+//     font-size: 20px;
+// }
 
-.upload-btn-wrapper input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-}
-.second-form{
-    border: 1px solid rgb(240, 240, 240);
-    border-radius: 3px;
-    box-shadow: 3px 4px #f7f7f7;
-}
+// .files{
+//     display: none;
+// }
 
-.song-form-image-button{
-    position: absolute;
-    // margin: auto;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: rgb(214, 214, 214);
-    padding: 5px 10px;
-    border-radius: 3px;
-}
+// .second-form{
+//     border: 1px solid rgb(240, 240, 240);
+//     border-radius: 3px;
+//     box-shadow: 3px 4px #f7f7f7;
+// }
 
-.image-preview{
-    position: relative;
-    background: rgb(186, 38, 38);
-    background: linear-gradient(135deg, rgba(186, 38, 38, 1) 0%, rgba(126, 18, 210, 1) 48%, rgba(0, 212, 255, 1) 100%);
-    width: 260px;
-    height: 260px;
-}
+// .song-form-image-button{
+//     position: absolute;
+//     // margin: auto;
+//     bottom: 20px;
+//     left: 0;
+//     right: 0;
+//     margin: auto;
+//     background-color: rgb(214, 214, 214);
+//     padding: 5px 10px;
+//     border-radius: 3px;
+// }
 
-.song-info{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-    height: 100%;
+// .image-preview{
+//     position: relative;
+//     background: rgb(186, 38, 38);
+//     background: linear-gradient(135deg, rgba(186, 38, 38, 1) 0%, rgba(126, 18, 210, 1) 48%, rgba(0, 212, 255, 1) 100%);
+//     width: 260px;
+//     height: 260px;
+// }
+
+// .song-info{
+//     display: flex;
+//     justify-content: space-evenly;
+//     margin-top: 20px;
+//     height: 100%;
    
-}
+// }
 
-.text-field{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 50px;
-    padding-bottom: 20px;
-}
-.description{
-    border: 1px solid rgb(197, 197, 197);
-    border-radius: 3px;
-    resize: vertical;
-    padding: 5px;
-    max-height: 300px;
-    min-height: 150px;
-    margin-top: 10px;
-}
-.basic-info{
-    width: 110px;
-    color: rgb(255, 75, 0);
-    height: 40px;
-    font-weight: 500;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    margin-top: 20px;
-    border-bottom: 2px solid rgb(255, 75, 0);
+// .text-field{
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     height: 50px;
+//     padding-bottom: 20px;
+// }
+// .description{
+//     border: 1px solid rgb(197, 197, 197);
+//     border-radius: 3px;
+//     resize: vertical;
+//     padding: 5px;
+//     max-height: 300px;
+//     min-height: 150px;
+//     margin-top: 10px;
+// }
+// .basic-info{
+//     width: 110px;
+//     color: rgb(255, 75, 0);
+//     height: 40px;
+//     font-weight: 500;
+//     font-size: 1.5rem;
+//     display: flex;
+//     align-items: center;
+//     margin-left: 20px;
+//     margin-top: 20px;
+//     border-bottom: 2px solid rgb(255, 75, 0);
 
-}
+// }
 
-.song-form-input{
-    padding: 5px 0px;
-    padding-left: 5px;
-    border: 1px solid rgb(197, 197, 197);
-    border-radius: 4px;
-}
-.song-texts{
-    display: flex;
-    flex-direction: column;
-    // justify-content: space-between;
-    height: 100%;
+// .song-form-input{
+//     padding: 5px 0px;
+//     padding-left: 5px;
+//     border: 1px solid rgb(197, 197, 197);
+//     border-radius: 4px;
+// }
+// .song-texts{
+//     display: flex;
+//     flex-direction: column;
+//     // justify-content: space-between;
+//     height: 100%;
 
-}
-.song-all-inputs{
-    height: 90%;
+// }
+// .song-all-inputs{
+//     height: 90%;
     
-}
+// }
 
-.genre{
-    width: 150px;
-}
-.song-form-bottom{
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin: auto;
-    align-items: center;
-    margin-top: 10px;
-}
+// .genre{
+//     width: 150px;
+// }
+// .song-form-bottom{
+//     display: flex;
+//     justify-content: space-between;
+//     width: 90%;
+//     margin: auto;
+//     align-items: center;
+//     margin-top: 10px;
+// }
 
-.song-form-bottom-buttons{
-    padding: 5px 10px;
-}
-.song-form-cancel{
+// .song-form-bottom-buttons{
+//     padding: 5px 10px;
+// }
+// .song-form-cancel{
     
-}
+// }
 
-.song-form-save{
-    background-color: rgb(255, 75, 0);
-    color: white;
-    border-radius: 3px;
-}
+// .song-form-save{
+//     background-color: rgb(255, 75, 0);
+//     color: white;
+//     border-radius: 3px;
+// }
