--- a/app/assets/stylesheets/home-songs-container.scss
+++ b/app/assets/stylesheets/home-songs-container.scss
@@ -1,6 +1,62 @@
 .home-songs-container{
+    
     position: relative;
     background-color: "lightgray";
     overflow: hidden;
     height: 100%
+}
+
+.home-container{
+    width: 1240px;
+    margin: auto;
+}
+.home-top{
+    position: relative;
+}
+.home-profile-photo{
+    // position: absolute;
+   
+    // top: auto;
+    
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    background-color: red;
+}
+
+.home-photo-user{
+    position: absolute;
+    display: flex;
+    top: 35px;
+    left: 35px;
+   
+}
+
+.home-profile-background{
+    width: inherit;
+    height: 270px;
+    background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+
+
+}
+.home-page-welcome{
+    margin-left: 50px;
+}
+.home-profile-username{
+    font-size: 1.7rem;
+    color: white;
+    text-shadow: 0 0 3px rgb(255, 66, 66);
+
+}
+.home-page-of{
+    color: white;
+    font-size: 1.2rem;
+}
+
+.home-welcome{
+    font-size: 2.5rem;
+    color: white;
+    text-shadow: 0 0 3px #000;
+
 }
