--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -9,28 +9,76 @@
     align-items: center;
 }
 
+#player-play{
+    color: rgb(255, 75, 0);
+}
+
 .player-audio{
     display: none;
 }
 
 .player-playback{
     width: 500px;
-    height: 100%;
+    height: 16px;
     display: flex;
     align-items: center;
     position: relative;
 }
 
 #player-playback-bar{
-   width: 100%;
-    height: 2px;
-    background-color: black;
+   width: 500px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
 #player-playback-dot{
     position: absolute;
-    height: 14px;
-    width: 14px;
+    height: 10px;
+    width: 10px;
     border-radius: 10px;
-    background-color: red;
+    background-color: rgb(255, 75, 0);
+    z-index: 1;
+    right: 495px;
 }
+.player-description{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 200px;
+}
+.player-title-description{
+    width: 100px;
+}
+.player-progress{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 600px;
+    color: rgb(255, 75, 0);
+    font-size: 0.8rem;
+}
+.player-image{
+    width: 35px;
+    height: 35px;
+    background-color: gray;
+}
+#player-bar{
+    height: 1px;
+    width: 100%;
+    background-color: rgb(165, 165, 165);
+}
+.player-author{
+    color: rgb(148, 148, 148);
+}
+.player-title{
+    color: gray;
+}
+#player-bar-orange{
+    position: absolute;
+    height: 1px;
+    width: 0;
+    background-color: rgb(255, 75, 0);
+}
+
