--- a/app/assets/stylesheets/song_item.scss
+++ b/app/assets/stylesheets/song_item.scss
@@ -51,11 +51,13 @@
     color: rgb(142,142,142);
     font-weight: 300;
     font-size: 0.8rem;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.3px;
     
 }
 .song-item-description-title{
-    letter-spacing: 1.2px;
+    font-weight: 300;
+    font-size: 1rem;
+    // letter-spacing: 1.1px;
 }
 .song-item-elements{
     margin-left: 15px;
