--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -1,5 +1,5 @@
 .player-container{
-    position: sticky;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 50px;
@@ -74,6 +74,9 @@
 }
 .player-title{
     color: gray;
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow: ellipsis;
 }
 #player-bar-orange{
     position: absolute;
@@ -81,4 +84,8 @@
     width: 0;
     background-color: rgb(255, 75, 0);
 }
-
+// .player-box{
+//     height: 100px\;
+//     position: absolute;
+//     bottom: 0;
+// }
