--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,13 @@
     <script src = "https://kit.fontawesome.com/c212c7eb6d.js"
     crossorigin = "anonymous" > </script>
 
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico"/>
 
     
     <% if current_user %>
