--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,24 @@
         }
       </script>
     <% end %>
+
+    <script type="text/javascript">
+  window.party1 = "<%= image_url('party1.jpg') %>";
+</script>
+    <script type="text/javascript">
+  window.party2 = "<%= image_url('party2.jpg') %>";
+</script>
+
+<script type="text/javascript">
+  window.apple = "<%= image_url('apple.png') %>";
+</script>
+
+<script type="text/javascript">
+  window.music-notes = "<%= image_url('music-notes.jpg') %>";
+</script>
+<script type="text/javascript">
+  window.singer = "<%= image_url('singer.jpg') %>";
+</script>
     
   </head>
 
