--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico"/>
+    <link rel="shortcut icon" type="image/jpg" href="<%= image_url('favicon.ico') %>"/>
 
     
     <% if current_user %>
