--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -235,7 +235,8 @@ a{
 
 .index-trending-container h3 {
     margin-bottom: 40px;
-    font-weight: 300;
+    font-weight: 400;
+    font-size: 2rem;
 }
 
 .index-trending-tracks {
