--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 </script>
 
 <script type="text/javascript">
-  window.music-notes = "<%= image_url('music-notes.jpg') %>";
+  window.musicNotes = "<%= image_url('music-notes.jpg') %>";
 </script>
 <script type="text/javascript">
   window.singer = "<%= image_url('singer.jpg') %>";
