--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -6,8 +6,23 @@ header {
     background-color: rgb(51, 51, 51);
 
     color: rgb(204, 204, 204);
-    position: relative;
+    //position: fixed;
     z-index: 2;
+    left: 0;
+    right: 0;
+    margin: auto;
+  //  margin-bottom: 400px;
+
+  
+}
+.fake-header {
+    position: fixed;
+    width: 100%;
+    height: 45px;
+    z-index: 2;
+    background-color: rgb(51, 51, 51);
+    
+
 }
 
 header a {
@@ -22,6 +37,9 @@ nav {
     display: flex;
     justify-content: space-between;
     width: 1240px;
+    z-index: 3;
+    position: fixed;
+    height: inherit;
 
 }
 
@@ -151,12 +169,19 @@ canvas {
     
     position: absolute;
     background-color: rgb(18,18,18);
-    // z-index: 2;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
 }
 
 .dropdown-menu-1 div{
     height: 30px;
     color: rgb(197,197,197);
+}
+
+
+.dropdown-menu-1 div:last-child{
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
 }
 .dropdown-menu-1 div:hover{
     background-color: rgb(51, 51, 51);
@@ -169,16 +194,33 @@ canvas {
     height: inherit;
     background-color: rgb(51, 51, 51);
     top: 45px;
-    // display: none;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.dropdown-menu-2 div:last-child{
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
 }
 .dropdown-2{
     position: relative;
 }
 .dropdown-menu-2 div {
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 30px;
     color: rgb(197, 197, 197);
+    background-color: rgb(18, 18, 18);
+
+    
+    
 }
 .dropdown-menu-2 div:hover {
     color: white;
+    background-color: rgb(51, 51, 51);
 }
+
+
 
