fixed a lot of bugs

--- a/app/assets/stylesheets/song_form.scss
+++ b/app/assets/stylesheets/song_form.scss
@@ -14,6 +14,7 @@
     color: red;
     font-weight: 500;
     list-style: circle;
+    margin-top: 10px;
 }
 .song-form-errors-list{
     font-weight: 400;
