--- a/app/assets/stylesheets/photo-upload-modal.scss
+++ b/app/assets/stylesheets/photo-upload-modal.scss
@@ -9,8 +9,8 @@
 }
 
 .photo-upload-modal-content{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 250px;
     background-color: white;
     position: fixed;
     left: 0;
@@ -40,9 +40,10 @@
     height: 50px;
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 40px;
 }
 .photo-upload-modal-content-buttons-cancel{
-    width: 70px;
+    width: 90px;
     padding: 2px 5px;
     height: 30px;
     border: 1px solid white;
@@ -53,7 +54,7 @@
 }
 
 .photo-upload-modal-content-buttons-save {
-    width: 70px;
+    width: 90px;
     padding: 2px 5px;
     background-color: rgb(255,75,0);
     color: white;
@@ -66,4 +67,13 @@
     border: 1px solid rgb(255, 75, 0);
     background-color: white;
     color: black;
+}
+
+.photo-errors{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 40px;
+    color: red;
+    list-style: none;
 }
