--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -102,7 +102,8 @@ a{
 #slide-2{
     position: absolute;
     top: 0;
-    left: 1240px;
+    transform: translateX(100%)
+    // left: 1240px;
 }
 
 #slide-2 img{
