--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -114,8 +114,9 @@ nav {
 }
 
 .profile-picture {
-    width: 20px;
-    padding: 5px;
+    width: 32px;
+    height: 32px;
+    // padding: 5px;
     background-color: gray;
     border-radius: 100px;
     // margin-left: 30px;
