--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
       <script>
         window.currentUser = {
           "id": <%= current_user.id %>,
-          "username": "<%= current_user.username %>"
+          "username": "<%= current_user.username %>",
+          "profilePhoto": "<%= url_for(current_user.profile_photo) %>"
         }
       </script>
     <% end %>
