working on the edit page

--- a/app/assets/stylesheets/song_item.scss
+++ b/app/assets/stylesheets/song_item.scss
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: space-between;
     background-color: white;
+    padding-bottom: 35px;
+
 }
 
 .song-item-container > img{
