--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -11,9 +11,8 @@
 }
 
 #player-play{
-    color: rgb(255, 75, 0);
+    color: black;
 }
-
 .player-audio{
     display: none;
 }
@@ -67,6 +66,9 @@
     background-color: gray;
     
 }
+.player-duration{
+    color: rgb(61, 61, 61);
+}
 #player-bar{
     height: 1px;
     width: 100%;
@@ -106,7 +108,6 @@
 }
 .player-volume-container{
     position: absolute;
-    
     top: -110px;
     height: 100px;
     width: 30px;
@@ -114,7 +115,6 @@
     border: 1px solid gray;
     border-radius: 3px;
     display: none;
-    
 }
 .show-player-volume{
     display: flex;
@@ -128,7 +128,6 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    // z-index: 2;
 }
 
 .player-volume-bar-container-fake{
@@ -142,8 +141,6 @@
     width: 2px;
     height: 80px;
     background-color: rgb(211, 211, 211);
-    // z-index: 0;
-
 }
 
 .player-volume-bar-orange{
@@ -153,12 +150,9 @@
     width: 2px;
     background-color: rgb(255, 75, 0);
     transition: height 0.5s;
-    
-    // z-index: -1;
 }
 .player-volume-bar-dot{
     position: absolute;
-    // z-index: -1;
     top: -5px;
     left: -4px;
     height: 10px;
