--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,10 @@
         window.currentUser = {
           "id": <%= current_user.id %>,
           "username": "<%= current_user.username %>",
-          "profilePhoto": "<%= url_for(current_user.profile_photo) %>"
+          "profilePhoto": "<%= url_for(current_user.profile_photo) %>",
+          "facebook": "<%= current_user.facebook%>",
+          "instagram": "<%= current_user.instagram %>",
+          "description": "<%= current_user.description %>",
         }
       </script>
     <% end %>
