--- a/app/assets/stylesheets/home_songs_container.scss
+++ b/app/assets/stylesheets/home_songs_container.scss
@@ -162,6 +162,7 @@
     height: 30px;
     font-size: 1.5rem;
     font-weight: 300;
+    width: 840px;
 }
 .home-right-panel-container{
     display: flex;
@@ -208,6 +209,7 @@ width: 33.3%;
     flex-direction: column;
     justify-content: space-between;
     height: 200px;
+    width: 350px;
 }
 .home-right-panel-description{
     height: 100px;
