--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
         window.currentUser = {
           "id": <%= current_user.id %>,
           "username": "<%= current_user.username %>",
-          "profilePhoto": "<%= url_for(current_user.profile_photo) %>",
-          "facebook": "<%= current_user.facebook%>",
-          "instagram": "<%= current_user.instagram %>",
-          "description": "<%= current_user.description %>",
+          "profilePhoto": "<%= current_user.profile_photo.attached? ? url_for(current_user.profile_photo) : nil %>",
+          "facebook": "<%= current_user.facebook ? current_user.facebook : nil%>",
+          "instagram": "<%= current_user.instagram ? current_user.instagram : nil %>",
+          "description": "<%= current_user.description ? current_user.description : nil %>",
         }
       </script>
     <% end %>
