--- a/app/assets/stylesheets/home_songs_container.scss
+++ b/app/assets/stylesheets/home_songs_container.scss
@@ -26,7 +26,6 @@
     height: 200px;
     width: 200px;
     border-radius: 100px;
-    background-color: red;
 }
 
 .home-photo-user{
@@ -104,7 +103,7 @@
     object-fit: cover;
 }
 .home-middle-container{
-    width: 95%;
+    width: 96.5%;
     margin: auto;
     background-color: white;
     // display: flex;
@@ -118,6 +117,8 @@
   
     border-right: 1px solid rgb(226, 226, 226);
     padding-right: 20px;
+    width: 70%;
+
 }
 .home-page-info-container{
     // position: relative;
@@ -162,12 +163,12 @@
     height: 30px;
     font-size: 1.5rem;
     font-weight: 300;
-    width: 840px;
 }
 .home-right-panel-container{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 30%;
+    padding-left: 20px;
     // align-items: center;
     // justify-content: space-between;
     // height: 250px;
@@ -184,7 +185,6 @@
 
 .home-right-panel-columns-followers{
 width: 33.3%;
- padding-left: 20px;
 
 }
 
@@ -192,13 +192,13 @@ width: 33.3%;
     border-left: 1px solid rgb(226, 226, 226);
     border-right: 1px solid rgb(226, 226, 226);
 
-width: 33.3%;
- padding-left: 20px;
+    width: 33.3%;
+    padding-left: 15px;
 }
 
 .home-right-panel-columns-tracks{
     width: 33.3%;
-     padding-left: 20px;
+    padding-left: 15px;
 }
 .home-right-panel-counters{
     font-size: 1.4rem;
@@ -209,27 +209,34 @@ width: 33.3%;
     flex-direction: column;
     justify-content: space-between;
     height: 200px;
-    width: 350px;
 }
 .home-right-panel-description{
     height: 100px;
     overflow-y: scroll;
     border: 1px solid rgb(226, 226, 226);
-    width: 90%;
+    width: 94%;
     border-radius: 3px;
     margin: auto;
-    padding: 5px;
-    margin-top: 15px;
+    padding: 8px;
+    margin-top: 20px;
+    line-height: 1.2rem;
+    color: rgb(107, 107, 107);
+    background-color: rgb(248, 248, 248);
 
 }
-
+.home-right-panel-description:hover{
+    color: rgb(29, 29, 29);
+    
+    background-color: rgb(240, 240, 240);
+    transition: color 0.7s;
+}
 .home-social-media{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 60px;
-    margin-left: 10px;
-    margin-top: 10px;
+    height: 80px;
+    // margin-left: 10px;
+    margin-top: 15px;
     font-size: 0.9rem;
     color: rgb(145, 145, 145);
     width: 100px;
