--- a/app/assets/stylesheets/home_songs_container.scss
+++ b/app/assets/stylesheets/home_songs_container.scss
@@ -145,14 +145,53 @@
 }
 
 .home-page-info-container button{
+    
+    
+}
+
+.home-profile-edit{
+    width: 70px;
+    color: rgb(66, 66, 66);
     margin-right: 30px;
-    // position: relative;
     padding: 7px 15px;
     border: 1px solid rgb(226, 226, 226);
     border-radius: 3px;
     text-align: center;
-    
+    display: flex;
+    justify-content: space-evenly;
 }
+.home-profile-edit:hover{
+    border: 1px solid rgb(167, 167, 167);
+    color: rgb(43, 43, 43);
+
+}
+.home-follow-button{
+    width: 90px;
+    margin-right: 30px;
+    padding: 7px 15px;
+    border-radius: 3px;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgb(255,75,0);
+    color: white;
+
+} 
+.home-follow-button:hover{
+    opacity: 0.9;
+
+}
+.following{
+    color: rgb(255, 75, 0);
+    background-color: white;
+    border: 1px solid rgb(255, 75, 0);
+
+}
+
+
+
+
+
 
 
 
