--- a/app/assets/stylesheets/song_form.scss
+++ b/app/assets/stylesheets/song_form.scss
@@ -1,6 +1,6 @@
 .song-form-container{
    
-    height: 1000px;
+    height: 100%;
     background-color: rgb(240, 240, 240);
 }
 .song-form-content{
@@ -36,14 +36,16 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
+
     z-index: 1;
     background-color: white;
     width: 800px;
-    height: 600px;
+    height: 500px;
     left: 0;
     right: 0;
     margin: auto;
-    margin-top: 100px;
+    top: 10%;
+    // margin-top: 100px;
     
 }
 .second-song-form{
@@ -51,14 +53,18 @@
     z-index: 1;
     background-color: white;
     width: 800px;
-    height: 600px;
+    // height: 85%;
+    // height: 600px;
     left: 0;
     right: 0;
     margin: auto;
-    margin-top: 100px;
+    top: 10%;
     border: 1px solid rgb(240, 240, 240);
     border-radius: 3px;
     box-shadow: 3px 4px #f7f7f7;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
     
 }
 
@@ -115,14 +121,14 @@
     flex-direction: column;
     justify-content: space-between;
     height: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 .description{
     border: 1px solid rgb(197, 197, 197);
     border-radius: 3px;
     resize: vertical;
     padding: 5px;
-    max-height: 300px;
+    max-height: 200px;
     min-height: 150px;
     margin-top: 10px;
 }
@@ -150,11 +156,11 @@
     display: flex;
     flex-direction: column;
     // justify-content: space-between;
-    height: 100%;
+    // height: 100%;
 
 }
 .song-all-inputs{
-    height: 90%;
+    // height: 90%;
     width: 100%;
     
 }
@@ -163,12 +169,13 @@
     width: 150px;
 }
 .song-form-bottom{
+    height: 90px;
     display: flex;
     justify-content: space-between;
     width: 90%;
     margin: auto;
     align-items: center;
-    margin-top: 10px;
+    // margin-top: 10px;
 }
 
 .song-form-bottom-buttons{
