--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,16 +93,16 @@ input[type="submit"] {
 
 }
 
-html, #root, .app-container{
-    height: 100%;
-}
+// html, body{
+//     height: 100%;
+// }
 
 /* Main Body Application */
 body {
     font-family: 'Roboto', sans-serif !important;
     background-color: rgb(240, 240, 240);
     font-size: 0.9rem;
-    padding-bottom: 75px;
+    padding-bottom: 50px;
     
     /* font-family: 'Overpass',sans-serif;
 font-family: Arial, Helvetica, sans-serif; */
@@ -176,18 +176,22 @@ button:focus {
     //     height: 100%;
     // }
     
-    html,
-    body {
-    }
-
     body{
         height: 100%;
     }
-    #root{
-    }
+    // html{
 
-    .app-container{
-    }
+    //     height: 100%;
+    // }
 
-    .home-container{
-    }
+    // #root{
+    //     height: 100%;
+    // }
+
+    // .app-container{
+    //     height: 100%;
+    // }
+
+    // .home-container{
+    //     height: 100%;
+    // }
