--- a/app/assets/stylesheets/song-show.scss
+++ b/app/assets/stylesheets/song-show.scss
@@ -79,8 +79,10 @@
 }
 .show-page-comment-input{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: auto;
-    width: 600px;
+    // width: 600px;
     background-color: rgb(219, 219, 219);
 }
 .show-page-comment-img{
@@ -90,10 +92,141 @@
 }
 
 .show-page-input{
-    width: 100%;
+    
+    width: 90%;
     margin: 5px;
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
     border: 1px solid rgb(165, 165, 165);
     padding: 3px 5px;
+}
+
+.show-page-edit-bar{
+    height: 40px;
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // margin: auto;
+}
+
+.show-page-item-buttons{
+    padding: 5px 10px;
+    border-radius: 3px;
+}
+
+.show-page-comment-input-container{
+    width: 95%;
+    margin: auto;
+    padding-top: 30px;
+}
+
+.show-page-comment-container{
+    background-color: white;
+}
+
+.show-page-middle-container{
+    height: 100%;
+    background-color: white;
+    // display: flex;
+}
+
+.show-page-comments-image{
+    height: 125px;
+    width: 125px;
+    border-radius: 100px;
+    border: 1px solid rgb(180, 180, 180);
+}
+
+.show-page-followers-tracks{
+    display: flex;
+    justify-content: space-evenly;
+    
+    color: rgb(153, 153, 153);
+    font-size: 0.8rem;
+    font-weight: 300;
+    width: 80px;
+    text-align: center;
+}
+.show-page-followers-tracks div{
+    display: flex;
+
+}
+.show-page-profile-middle{
+    height: 250px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.show-page-middle-follow-button{
+
+    margin: 0;
+    padding: 4px 6px;
+}
+
+.fa-user-friends,
+.fa-music{
+    padding: 0px 3px;
+    padding-top: 2px;
+}
+.show-page-comments-section{
+    width: 100%;
+}
+
+.show-page-comments-amount{
+    width: 100%;
+}
+
+.show-page-all-comments{
+    display: flex;
+}
+
+.show-page-each-comment-image{
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+}
+.show-page-each-comment-content{
+    padding-bottom: 15px;
+    display: flex;
+    // align-items: center;
+}
+.show-page-comment-username-text{
+    width: 100%;
+    // height: 60px;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-evenly;
+    margin-left: 20px;
+}
+.show-page-comment-username{
+    padding-bottom: 5px;
+    color: rgb(109, 109, 109);
+    font-size: 0.9rem;
+}
+.show-page-comment-username:hover{
+    color: rgb(0, 0, 0);
+    
+}
+.show-page-comment-text {
+    font-weight: 400;
+}
+
+.show-comment-post-button{
+    padding: 0 10px;
+    margin-right: 15px;
+    height: 30px;
+    text-align: center;
+    border-radius: 3px;
+    background-color: rgb(255,75,0);
+    color: rgb(241, 241, 241);
+
+}
+
+.show-comment-post-button:hover{
+    background-color: rgb(230, 70, 1);
+    color: white;
 }
