--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,6 +214,8 @@ button:focus {
     }
 
     .page-bottom {
+        position: relative;
+        // z-index: -1;
         display: flex;
         align-items: center;
         text-align: center;
