--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -64,19 +64,26 @@ nav {
     color: gainsboro;
 }
 
-.logo {
+.logo-box {
     width: 80px;
     background-color: rgb(253, 101, 33);
     color: white;
     border-right: 1px solid rgb(24, 24, 24);
+  
 }
-
+.logo{
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;    
+    
+}
 .fa-water {
-    font-size: small;
+      font-size: 1.1rem;
 }
 
 .fa-cloud {
-    font-size: large;
+      font-size: 1.5rem;
 }
 
 .home {
