--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -250,6 +250,8 @@ a{
 }
 
 .track-img {
+    background-color: #FFE53B;
+    background-image: linear-gradient(147deg, #FFE53B 0%, rgb(247, 65, 65) 74%);
     width: 180px;
     height: 180px;
 }
