fixed a lot of bugs

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -204,6 +204,7 @@ canvas {
     top: 45px;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
+    user-select: none;
 }
 
 .dropdown-menu-2 div:last-child{
