--- a/app/assets/stylesheets/song_form.scss
+++ b/app/assets/stylesheets/song_form.scss
@@ -48,6 +48,11 @@
     // margin-top: 100px;
     
 }
+
+.first-song-form > h3{
+    font-size: 2rem;
+    font-weight: 400;
+}
 .second-song-form{
     position: absolute;
     z-index: 1;
