--- a/app/assets/stylesheets/photo_upload_modal.scss
+++ b/app/assets/stylesheets/photo_upload_modal.scss
@@ -1,8 +1,12 @@
 .photo-upload-modal{
     position: fixed;
-    z-index: 2;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 3;
     height: 100%;
-    width: inherit;
+    width: 100%;
     background-color: rgba(49, 49, 49, 0.5);
 
 
@@ -30,7 +34,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 1.1rem;
 }
 
