--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -246,7 +246,12 @@ a{
 }
 
 .index-trending-single-track {
+    padding-bottom: 20px;
     width: 180px;
+}
+
+.index-trending-single-track p{
+    cursor: pointer;
 }
 
 .track-img {
@@ -459,4 +464,8 @@ h4 {
 
 .index-footer-list a:hover {
     color: rgb(87, 86, 86);
+}
+
+.last-item{
+    margin-top: 20px;
 }
