--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -38,6 +38,8 @@
 
 .show-page-song-play-title{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .show-play-button{
@@ -288,4 +290,32 @@
 .show-page-delete-comment:hover{
     color: red;
     font-size: 1rem;
+}
+
+
+.song-genre-show {
+    
+    padding: 1px 10px;
+    max-width: 80px;
+    margin-right: 20px;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: white;
+    border-radius: 10px;
+    background-color: rgb(143, 143, 143);
+    font-size: 0.8rem;
+    height: 20px;
+    line-height: 20px;
+    
+}
+
+.song-genre-show:hover {
+    background-color: rgb(87, 87, 87);
+
+}
+
+.show-page-song-play-title-box{
+    display: flex;
 }
