--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -177,11 +177,11 @@ button:focus {
     // }
     
     body{
-        height: 100%;
+        // height: 100%;
     }
     html{
+        // height: 100%;
 
-        height: 100%;
     }
 
     #root{
@@ -189,7 +189,7 @@ button:focus {
     }
 
     .app-container{
-        height: 100%;
+        // height: 100%;
     }
 
     .home-container{
